src/test/ui/missing_non_modrs_mod/missing_non_modrs_mod.stderr
error[E0583]: file not found for module `missing`
  --> $DIR/foo.rs:13:5
   |
13 | mod missing;
   |     ^^^^^^^
   |
   = help: name the file either foo/missing.rs or foo/missing/mod.rs inside the directory "$DIR"

error: aborting due to previous error

